issue #270